welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: type ==
	if (litMessage():String==A) {
                               ^